-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.5.1
-
None
-
Linux.
OS X does not appear to exhibit this problem.
QDBusObjectPath: invalid path "/qt/profile/btchat-test12659/0"
QDBusConnection: error: could not send message to service "org.bluez" path "/org/bluez" interface "org.bluez.ProfileManager1" member "RegisterProfile": Marshalling failed: Invalid object path passed in arguments
qt.bluetooth.bluez: Cannot register profile "Marshalling failed: Invalid object path passed in arguments"
| For Gerrit Dashboard: QTBUG-49402 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 144657,5 | Bluez5: Sanitize app name to be valid DBus object path name | 5.6 | qt/qtconnectivity | Status: MERGED | +2 | 0 |