Bluez5: Sanitize app name to be valid DBus object path name

This may happen when the app name contains for example a dash ('-').

Task-number: QTBUG-49402
Change-Id: I04b289b0723e2979a67c93e335205556bf1eb30e
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@theqtcompany.com>